[package]
name = "wasmtimer"
edition = "2021"
description = "Time utils from std::time, tokio::time and tokio_util::time on WASM targets"
version = "0.0.1"
authors = ["WhizSid <whizsid@aol.com>"]
license = "MIT"
repository = "https://github.com/whizsid/wasmtimer-rs"

[dependencies]
futures = "0.3"
parking_lot = "0.12"
pin-utils = "0.1.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Performance", "Window"] }
slab = { version = "0.4.4", optional = true }

[features]
default = ["tokio-util"]
tokio-test-util = []
tokio-util = ["slab"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
